trunk/Archive2/79/88bea5222cfade/output
main.cpp:2:1: error: template declaration of 'typedef'
 class A{ }
 ^
main.cpp: In function 'int main()':
main.cpp:6:13: error: 'a' was not declared in this scope
 int main(){ a.foo(); }
             ^
