trunk/Archive2/79/88bea5222cfade/main.cpp
template <class T, class V>
class A{ }

typedef A<T, int> MyPartialSpecializa<T>; 

int main(){ a.foo(); }